# zip_downloader

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
tests/data/: text.txt
